--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "blog",
   "main": "main.js",
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": ">=0.18.1",
     "history": "^4.6.3",
     "material-ui": "^0.18.3",
     "react": "^15.5.4",
